make registry RBAC opt-in
