# internal/api/handlers/registry.go
@@ -66,14 +66,15 @@ func (h *RegistryHandler) CreateRegistry(c *gin.Context) {
 	userID := user.(*models.User).ID
 
 	result, err := h.svc.CreateRegistry(service.CreateRegistryReq{
-		Name:      req.Name,
-		URL:       req.URL,
-		Username:  req.Username,
-		Password:  req.Password,
-		APIToken:  req.APIToken,
-		IsDefault: req.IsDefault,
-		Namespace: req.Namespace,
-		CreatedBy: userID,
+		Name:       req.Name,
+		URL:        req.URL,
+		Username:   req.Username,
+		Password:   req.Password,
+		APIToken:   req.APIToken,
+		IsDefault:  req.IsDefault,
+		Namespace:  req.Namespace,
+		Restricted: req.Restricted,
+		CreatedBy:  userID,
 	})
 	if err != nil {
 		handleServiceError(c, err)
@@ -123,13 +124,14 @@ func (h *RegistryHandler) UpdateRegistry(c *gin.Context) {
 	}
 
 	result, err := h.svc.UpdateRegistry(c.Param("id"), service.UpdateRegistryReq{
-		Name:      req.Name,
-		URL:       req.URL,
-		Username:  req.Username,
-		Password:  req.Password,
-		APIToken:  req.APIToken,
-		IsDefault: req.IsDefault,
-		Namespace: req.Namespace,
+		Name:       req.Name,
+		URL:        req.URL,
+		Username:   req.Username,
+		Password:   req.Password,
+		APIToken:   req.APIToken,
+		IsDefault:  req.IsDefault,
+		Namespace:  req.Namespace,
+		Restricted: req.Restricted,
 	})
 	if err != nil {
 		handleServiceError(c, err)
@@ -176,23 +178,25 @@ func (h *RegistryHandler) ListPublicRegistries(c *gin.Context) {
 // --- Request types ---
 
 type CreateRegistryRequest struct {
-	Name      string `json:"name" binding:"required"`
-	URL       string `json:"url" binding:"required"`
-	Username  string `json:"username"`
-	Password  string `json:"password"`
-	APIToken  string `json:"api_token"`
-	IsDefault bool   `json:"is_default"`
-	Namespace string `json:"namespace"`
+	Name       string `json:"name" binding:"required"`
+	URL        string `json:"url" binding:"required"`
+	Username   string `json:"username"`
+	Password   string `json:"password"`
+	APIToken   string `json:"api_token"`
+	IsDefault  bool   `json:"is_default"`
+	Namespace  string `json:"namespace"`
+	Restricted bool   `json:"restricted"`
 }
 
 type UpdateRegistryRequest struct {
-	Name      *string `json:"name"`
-	URL       *string `json:"url"`
-	Username  *string `json:"username"`
-	Password  *string `json:"password"`
-	APIToken  *string `json:"api_token"`
-	IsDefault *bool   `json:"is_default"`
-	Namespace *string `json:"namespace"`
+	Name       *string `json:"name"`
+	URL        *string `json:"url"`
+	Username   *string `json:"username"`
+	Password   *string `json:"password"`
+	APIToken   *string `json:"api_token"`
+	IsDefault  *bool   `json:"is_default"`
+	Namespace  *string `json:"namespace"`
+	Restricted *bool   `json:"restricted"`
 }
 
 type GrantRegistryToGroupRequest struct {
